--- a/manifest.json
+++ b/manifest.json
@@ -5,13 +5,14 @@
   "manifest_version": 2,
   "author": "Aleksa Ćuković",
   "description": "Add description.",
-  "homepage_url": "https://github.com/AleksaC/clippify",
-  "permissions": ["storage", "tabs"],
+  "homepage_url": "https://github.com/AleksaC/chrome-extension-base",
   "browser_action": {
     "default_popup": "src/popup.html"
   },
   "options_page": "src/options.html",
-  "background": { "scripts": ["hot-reload.js"] },
+  "background": {
+    "scripts": ["hot-reload.js"]
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
